--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,4 +18,9 @@ jobs:
       run: sudo apt-get install -y wireguard-tools
 
     - name: Build
-      run: make static
+      run: make generate-version-and-build static
+
+    - uses: actions/upload-artifact@v2
+      with:
+        name: etherguard
+        path: etherguard-go*
