ci: add multiple arch (armv6, armv7, aarch64)

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -6,6 +6,7 @@ on:
 jobs:
   x86_64:
       runs-on: ubuntu-latest
+      name: Build on ${{ matrix.distro }} x86_64
       steps:
       - uses: actions/checkout@v2
 
