--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -83,4 +83,4 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: etherguard-multi_arch
-          path: /artifacts
+          path: artifacts/
