--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,7 +1,9 @@
-name: Go
+name: Publish
 
 on:
-  - workflow_dispatch
+  push:
+    tags:
+      - '*'
 
 jobs:
   x86_64:
@@ -68,12 +70,9 @@ jobs:
           shell: /bin/sh
           install: |
             apt-get -y update
-            apt install software-properties-common curl -y
+            apt install software-properties-common -y
             add-apt-repository ppa:longsleep/golang-backports
-            echo "deb [trusted=yes] https://packagecloud.io/fdio/release/ubuntu focal main" | tee -a /etc/apt/sources.list.d/99fd.io.list > /dev/null
-            curl -L https://packagecloud.io/fdio/release/gpgkey | apt-key add -
             apt-get -y update
-            apt-get install -y vpp vpp-plugin-core python3-vpp-api vpp-dbg vpp-dev libmemif libmemif-dev
             apt-get install -y wireguard-tools golang-go build-essential git
           run: |
             make all static vpp
