--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,9 +1,7 @@
-name: Publish
+name: Go
 
 on:
-  push:
-    tags:
-      - '*'
+  - workflow_dispatch
 
 jobs:
   x86_64:
@@ -43,6 +41,7 @@ jobs:
         with:
           name: etherguard-mipsle
           path: etherguard-go*
+
 
   multi-arch:
     runs-on: ubuntu-20.04
