--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -102,12 +102,19 @@ jobs:
           shell: /bin/sh
           install: |
             apt-get -y update
+
             apt install software-properties-common -y
+
+            echo "deb [trusted=yes] https://packagecloud.io/fdio/release/ubuntu focal main" > /etc/apt/sources.list.d/99fd.io.list
+            curl -L https://packagecloud.io/fdio/release/gpgkey | apt-key add -
             add-apt-repository ppa:longsleep/golang-backports
+
             apt-get -y update
+            apt-get install -y vpp vpp-plugin-core python3-vpp-api vpp-dbg vpp-dev libmemif libmemif-dev
             apt-get install -y wireguard-tools golang-go build-essential git
           run: |
             make all static
+            make vpp || true
             mkdir /artifacts/${artifact_dir}
             cp etherguard-go* /artifacts/${artifact_dir}
 
