--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -77,7 +77,7 @@ jobs:
             add-apt-repository ppa:longsleep/golang-backports
 
             apt-get -y update
-            apt-get install -y vpp vpp-plugin-core python3-vpp-api vpp-dbg vpp-dev libmemif libmemif-dev
+            apt-get install -y vpp vpp-plugin-core python3-vpp-api vpp-dbg vpp-dev libmemif libmemif-dev || true
             apt-get install -y wireguard-tools golang-go build-essential git
           run: |
             make all static
@@ -87,5 +87,10 @@ jobs:
 
       - uses: actions/upload-artifact@v2
         with:
-          name: etherguard-multi_arch
-          path: artifacts/
+          name: etherguard-arm32
+          path: artifacts/armv7
+          
+      - uses: actions/upload-artifact@v2
+        with:
+          name: etherguard-arm64
+          path: artifacts/aarch64
