--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -86,11 +86,13 @@ jobs:
             cp etherguard-go* /artifacts/${artifact_dir}
 
       - uses: actions/upload-artifact@v2
+        if: ${{ matrix.arch == 'armv7' }}
         with:
           name: etherguard-arm32
           path: artifacts/armv7
           
       - uses: actions/upload-artifact@v2
+        if: ${{ matrix.arch == 'armv7' }}
         with:
           name: etherguard-arm64
           path: artifacts/aarch64
