--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -135,10 +135,12 @@ jobs:
             cp etherguard-go* /artifacts/${artifact_dir}
 
       - uses: actions/upload-artifact@v2
+        if: ${{ matrix.arch == 'armv7' }}
         with:
           name: etherguard-arm32
           path: artifacts/armv7
       - uses: actions/upload-artifact@v2
+        if: ${{ matrix.arch == 'aarch64' }}
         with:
           name: etherguard-arm64
           path: artifacts/aarch64
